# ALPSCore-parapack

./: CMakeLists.txt  README.md  alps-parapack.pc.in
